--- a/storm-supervisor.conf
+++ b/storm-supervisor.conf
@@ -11,7 +11,7 @@ script
   . /etc/default/storm-supervisor
 
   # Set STORM Options
-  STORM_CMD="-classpath $STORM_CLASSPATH -Xms$STORM_SUPERVISOR_JVM_MEMORY -Xmx$STORM_SUPERVISOR_JVM_MEMORY -Djava.library.path=\"$JAVA_LIBRARY_PATH\" -Dstorm.options=\"$STORM_OPTIONS\" -Dstorm.home=$STORM_HOME $SUPERVISOR_JVM_OPTS backtype.storm.daemon.supervisor"
+  STORM_CMD="-classpath $STORM_CLASSPATH -Xms$STORM_SUPERVISOR_JVM_MEMORY -Xmx$STORM_SUPERVISOR_JVM_MEMORY -Djava.library.path=\"$JAVA_LIBRARY_PATH\" -Dstorm.options=\"$STORM_OPTIONS\" -Dstorm.home=$STORM_HOME $STORM_SUPERVISOR_JVM_OPTS backtype.storm.daemon.supervisor"
 
   if [ "x$ENABLE" = "xyes" ]; then
     exec start-stop-daemon --start --pidfile ${STORM_SUPERVISOR_PID} --make-pidfile --chuid ${STORM_USER} --chdir ${STORM_HOME} --name storm-supervisor --exec /usr/bin/java -- ${STORM_CMD}
